# systemy-obliczeniowe-2021

./: .gitignore  README.md  lab1.py  main.py  pyproject.toml
systemy_bliczeniowe/lab1/: lista1_1.py  lista1_2.py  lista1_3.py  lista1_4.py  listaP.py
systemy_bliczeniowe/lab2/: lista2_1.py  lista2_2.py  lista2_3.py
systemy_bliczeniowe/lab3/: lista3.pyx  lista3_raw.py  setup.py  test.pyx
systemy_bliczeniowe/lab4/: Z1.py  Z2.py
systemy_bliczeniowe/lab5/: Z1.py  Z2.py
systemy_bliczeniowe/lab6/: Z1.py  kernel.cl
tests/: test_systemy_bliczeniowe.py
