[tool.poetry]
name = "systemy-bliczeniowe"
version = "0.1.0"
description = ""
authors = ["Jakub Ciszek <jakubciszek64@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.21.2"
scikit-learn = "^1.0"
pandas = "^1.3.3"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
requests = "^2.26.0"
tqdm = "^4.62.3"
Cython = "^0.29.24"
mpi4py = "^3.1.3"
PyQt5 = "^5.15.6"
tensorflow = "^2.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
ipykernel = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
